--- a/Data.html
+++ b/Data.html
@@ -319,7 +319,7 @@ $(document).ready(function () {
 </p>
 <p><img src="figures/table1.png" width="1250" /> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsregisteredweeklyinenglandandwalesprovisional/weekending17april2020#measuring-the-data" class="uri">https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsregisteredweeklyinenglandandwalesprovisional/weekending17april2020#measuring-the-data</a></p>
 <p>Website updated on 17/06/2020.</p>
-<p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen</p>
+<p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen, Swapnil Mishra</p>
 </div>
 
 
