--- a/glossary.html
+++ b/glossary.html
@@ -315,7 +315,7 @@ $(document).ready(function () {
 <p><strong><em>Excess deaths:</em></strong> An estimate of the number of all-cause deaths that are substantially higher or lower than expected all-cause deaths in a week. Given by the difference between registered and expected all-cause deaths allowing for the uncertainty in that expectation.</p>
 <p><strong><em>Excess non-COVID-19 deaths:</em></strong> An estimate of the number of deaths that are not due to COVID-19 that are substantially higher or lower than expected all-cause deaths in a week. Given by subtracting registered COVID-19 deaths from the difference between registered and expected all-cause deaths, also allowing for the uncertainty in that expectation.</p>
 <p>Website updated on 17/06/2020.</p>
-<p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen</p>
+<p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen, Swapnil Mishra</p>
 
 
 
