--- a/Statistical_analysis.html
+++ b/Statistical_analysis.html
@@ -321,7 +321,7 @@ $(document).ready(function () {
 </ol>
 <p>Excess deaths can be computed from the above series. Comparing reported with predicted deaths for the period July 2019 to February 2020 allows us to assess the accuracy of the model in forecasting all-cause deaths; a close match between reported and predicted deaths over the time period before the COVID pandemic instils confidence in the validity of the forecasted all-cause deaths for the period of interest March and April that we would have expected in the absence of the pandemic.</p>
 <p>To assess the relative contribution of COVID-19 and excess deaths to all registered (observed) deaths during March and April, we calculate the percentage of expected (forecast) all-cause, registered COVID-19 and excess non-COVID-19 deaths on registered all-cause deaths, with prediction intervals around both expected deaths and excess non-COVID-19 deaths. We also calculate the proportion of registered to excess non-COVID-19 deaths.</p>
-<p>For each series the model is estimated using the R package KFAS. The source code of the analysis is available on github.com/j-idea/ONSdeaths. Going forward, updated estimates will be provided weekly over the pandemic and while there are significant excess deaths.</p>
+<p>For each series the model is estimated using the R package KFAS. The source code of the analysis is available on <a href="www.github.com/j-idea/ONSdeaths">github.com/j-idea/ONSdeaths</a>. Going forward, updated estimates will be provided weekly over the pandemic and while there are significant excess deaths.</p>
 <p>Website updated on 17/06/2020.</p>
 <p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen, Swapnil Mishra</p>
 
