--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Correspondence: <a href="mailto:k.hauck@imperial.ac.uk">Katharina Hauck</a>, <a 
 <p><br />
 </p>
 <p>This website provides weekly updates of deaths in England and Wales using publicly available data on the provisional number of deaths registered in the past week from the Office of National Statistics (<a href="Data.html">see Data</a>). We show the number of registered all-cause deaths, and the deaths registered as COVID-19 deaths as provided by the ONS for every week beginning in March 2020. We compare the all-cause deaths with the number of deaths we would have expected to see being registered in this week had there been no pandemic, based on numbers of deaths in corresponding weeks of previous years, and determine the number of excess deaths as the difference. We then compare the excess deaths with the recorded COVID-19 deaths, which gives an estimate of excess deaths that were not associated with COVID-19 according to official registers. These estimates of excess non-COVID-19 deaths inform whether the pandemic led to unexpected deaths that were higher (or lower) than what we would have expected in that week (<a href="figures.html">Figure 1</a>). It is possible that all or almost all excess deaths comprise of registered COVID-19 deaths, in that situation there are no excess non-COVID-19 deaths (<a href="figures.html">Figure 2</a>). It is also possible that excess non-COVID-19 deaths are actually lower than expected deaths, once registered COVID-19 deaths are subtracted from excess deaths (<a href="figures.html">Figure 3</a>). We also present total cumulative deaths across all categories. This is the sum of registered all-cause deaths, COVID-19 deaths, expected deaths and excess non-COVID-19 deaths from the week ending 6 March 2020 to 05 June 2020.</p>
-<p>It is not straightforward to estimate expected deaths, because the number of deaths in the absence of the pandemic is inherently unobservable. We forecast the expected number of deaths in each week from March 2020 onwards using time series methods and data on deaths going back to 2010. We consider the uncertainty around our estimates using prediction intervals. For further details, see the <a href="Statistical_analysis.html">Methods section</a>.</p>
+<p>It is not straightforward to estimate expected deaths, because the number of deaths in the absence of the pandemic is inherently unobservable. We forecast the expected number of deaths in each week from March 2020 onwards using time series methods and data on deaths going back to 2010. We consider the uncertainty around our estimates using confidence intervals. For further details, see the <a href="Statistical_analysis.html">Methods section</a>.</p>
 <p><br />
 </p>
 </div>
@@ -347,27 +347,35 @@ Correspondence: <a href="mailto:k.hauck@imperial.ac.uk">Katharina Hauck</a>, <a 
 </p>
 <div id="england-deaths-from-week-ending-06032020-to-week-ending-05062020" class="section level3">
 <h3>England: Deaths from week ending 06/03/2020 to week ending 05/06/2020 <img src="England_update.png" /></h3>
-<p>In the week ending 05 June 2020, there were 9995 registered all-cause deaths in England. These comprise of 1488 deaths registered due to COVID-19 and 8507 deaths registered due to other conditions. .</p>
-<p>Over the weeks ending 6 March 2020 to 05 June 2020, there were 189403 cumulative registered all-cause deaths in England. These comprise of 44736 deaths due to COVID-19 and 144667 deaths due to other conditions. We would have expected 133882 – 138696 all-cause deaths for that period. This implies that total excess deaths were between 50707 – 55521 , and comprised of 5971 – 10785 non-COVID-19 excess deaths.</p>
+<p><br />
+</p>
+<p>In the week ending 05 June 2020, there were 9995 registered all-cause deaths in England. These comprise of 1488 deaths registered due to COVID-19 and 8507 deaths registered due to other conditions.</p>
+<p>Over the weeks ending 6 March 2020 to 05 June 2020, there were 189403 cumulative registered all-cause deaths in England. These comprise of 44736 deaths due to COVID-19 and 144667 deaths due to other conditions. We would have expected 136294 (95% CI 133882 – 138696) all-cause deaths for that period. This implies that total excess deaths were between 50707 – 55521, and comprised of 8373 (95% CI 5971 – 10785) non-COVID-19 excess deaths.</p>
 <p><br />
 </p>
 </div>
 <div id="wales-deaths-from-week-ending-06032020-to-week-ending-05062020" class="section level3">
 <h3>Wales: Deaths from week ending 06/03/2020 to week ending 05/06/2020</h3>
+<p><br />
+</p>
 <p><img src="Wales_update.png" /></p>
-<p>In the week ending 05 June 2020, there were 700 registered all-cause deaths in Wales. These comprise of 100 deaths due to COVID-19 and 600 deaths due to other conditions. We would have expected 460 – 733 all-cause deaths for that week. This implies that total excess deaths were between -33 – 240, and excess non-COVID-19 deaths were not significantly different than the expected deaths.</p>
-<p>Over the weeks ending 6 March 2020 to 05 June 2020, there were 11278 cumulative registered all-cause deaths in Wales. These comprise of 2294 deaths due to COVID-19 and 8984 deaths due to other conditions. We would have expected 8051 – 9904 all-cause deaths for that period. This implies that total excess deaths were between 1374 – 3227, and excess non-COVID-19 deaths were not significantly different than the expected deaths.</p>
+<p>In the week ending 05 June 2020, there were 700 registered all-cause deaths in Wales. These comprise of 100 deaths due to COVID-19 and 600 deaths due to other conditions. We would have expected 596 (95% CI 460 – 733) all-cause deaths for that week. This implies that total excess deaths were between -33 – 240, and excess non-COVID-19 deaths were not significantly different than the expected deaths.</p>
+<p>Over the weeks ending 6 March 2020 to 05 June 2020, there were 11278 cumulative registered all-cause deaths in Wales. These comprise of 2294 deaths due to COVID-19 and 8984 deaths due to other conditions. We would have expected 8983 (95% CI 8051 – 9904) all-cause deaths for that period. This implies that total excess deaths were between 1374 – 3227, and excess non-COVID-19 deaths were not significantly different than the expected deaths.</p>
 <p><br />
 </p>
 </div>
 <div id="deaths-from-week-ending-06032020-to-week-ending-05062020-english-regions" class="section level3">
 <h3>Deaths from week ending 06/03/2020 to week ending 05/06/2020, English regions</h3>
+<p><br />
+</p>
 <p><img src="EnglandRegions_update.png" /></p>
 <p><br />
 </p>
 </div>
 <div id="table-cumulative-deaths-from-week-ending-06032020-to-week-ending-05062020-english-regions" class="section level3">
 <h3>Table: Cumulative deaths from week ending 06/03/2020 to week ending 05/06/2020, English regions</h3>
+<p><br />
+</p>
 <table class="table table-striped table-condensed" style="width: auto !important; ">
 <thead>
 <tr>
@@ -375,7 +383,7 @@ Correspondence: <a href="mailto:k.hauck@imperial.ac.uk">Katharina Hauck</a>, <a 
 Geographical unit
 </th>
 <th style="text-align:left;">
-Reported all-cause Deaths
+Reported all-cause deaths
 </th>
 <th style="text-align:left;">
 Expected (%)
@@ -384,13 +392,13 @@ Expected (%)
 Expected 95% confidence interval (%)
 </th>
 <th style="text-align:left;">
-Covid (%)
+COVID-19 (%)
 </th>
 <th style="text-align:left;">
-Excess non-Covid (%)
+Excess non-COVID-19 (%)
 </th>
 <th style="text-align:left;">
-Excess non-Covid 95% confidence interval (%)
+Excess non-COVID-19 95% confidence interval (%)
 </th>
 </tr>
 </thead>
@@ -655,12 +663,328 @@ Wales
 </div>
 <div id="deaths-from-week-ending-06032020-to-week-ending-05062020-by-gender-and-older-ages-england-and-wales" class="section level3">
 <h3>Deaths from week ending 06/03/2020 to week ending 05/06/2020, by gender and older ages, England and Wales</h3>
+<p><br />
+</p>
 <p><img src="Olderage_update.png" /></p>
+<p><br />
+</p>
+</div>
+<div id="table-cumulative-deaths-from-week-ending-06032020-to-week-ending-05062020-older-age-groups" class="section level3">
+<h3>Table: Cumulative deaths from week ending 06/03/2020 to week ending 05/06/2020, older age groups</h3>
+<p><br />
+</p>
+<table class="table table-striped table-condensed" style="width: auto !important; ">
+<thead>
+<tr>
+<th style="text-align:left;">
+Sex and age group (years)
+</th>
+<th style="text-align:left;">
+Reported all-cause deaths
+</th>
+<th style="text-align:left;">
+Expected (%)
+</th>
+<th style="text-align:left;">
+Expected 95% confidence interval (%)
+</th>
+<th style="text-align:left;">
+COVID-19 (%)
+</th>
+<th style="text-align:left;">
+Excess non-COVID-19 (%)
+</th>
+<th style="text-align:left;">
+Excess non-COVID-19 95% confidence interval (%)
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+All: 45-64
+</td>
+<td style="text-align:left;">
+22,527
+</td>
+<td style="text-align:left;">
+16,918 (75.1%)
+</td>
+<td style="text-align:left;">
+16,338 -17,508 (72.5% - 77.7%)
+</td>
+<td style="text-align:left;">
+4,552 (20.2%)
+</td>
+<td style="text-align:left;">
+1,057 (4.7%)
+</td>
+<td style="text-align:left;">
+467 - 1,637 (2.1% - 7.3%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+All: 65-74
+</td>
+<td style="text-align:left;">
+31,370
+</td>
+<td style="text-align:left;">
+23,764 (75.8%)
+</td>
+<td style="text-align:left;">
+22,892 -24,680 (73% - 78.7%)
+</td>
+<td style="text-align:left;">
+6,995 (22.3%)
+</td>
+<td style="text-align:left;">
+611 (1.9%)
+</td>
+<td style="text-align:left;">
+-305 - 1,483 (-1% - 4.7%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+All: 75-84
+</td>
+<td style="text-align:left;">
+58,742
+</td>
+<td style="text-align:left;">
+39,665 (67.5%)
+</td>
+<td style="text-align:left;">
+36,429 -42,715 (62% - 72.7%)
+</td>
+<td style="text-align:left;">
+15,221 (25.9%)
+</td>
+<td style="text-align:left;">
+3,856 (6.6%)
+</td>
+<td style="text-align:left;">
+806 - 7,092 (1.4% - 12.1%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+All: 85+
+</td>
+<td style="text-align:left;">
+83,164
+</td>
+<td style="text-align:left;">
+59,045 (71.0%)
+</td>
+<td style="text-align:left;">
+57,685 -60,352 (69.4% - 72.6%)
+</td>
+<td style="text-align:left;">
+19,824 (23.8%)
+</td>
+<td style="text-align:left;">
+4,295 (5.2%)
+</td>
+<td style="text-align:left;">
+2,988 - 5,655 (3.6% - 6.8%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Female: 45-64
+</td>
+<td style="text-align:left;">
+8,751
+</td>
+<td style="text-align:left;">
+6,837 (78.1%)
+</td>
+<td style="text-align:left;">
+6,581 - 7,094 (75.2% - 81.1%)
+</td>
+<td style="text-align:left;">
+1,567 (17.9%)
+</td>
+<td style="text-align:left;">
+347 (4%)
+</td>
+<td style="text-align:left;">
+90 - 603 (1% - 6.9%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Female: 65-74
+</td>
+<td style="text-align:left;">
+12,534
+</td>
+<td style="text-align:left;">
+9,862 (78.7%)
+</td>
+<td style="text-align:left;">
+9,445 -10,278 (75.4% - 82%)
+</td>
+<td style="text-align:left;">
+2,439 (19.5%)
+</td>
+<td style="text-align:left;">
+233 (1.9%)
+</td>
+<td style="text-align:left;">
+-183 - 650 (-1.5% - 5.2%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Female: 75-84
+</td>
+<td style="text-align:left;">
+26,446
+</td>
+<td style="text-align:left;">
+18,181 (68.7%)
+</td>
+<td style="text-align:left;">
+16,364 -19,858 (61.9% - 75.1%)
+</td>
+<td style="text-align:left;">
+6,195 (23.4%)
+</td>
+<td style="text-align:left;">
+2,070 (7.8%)
+</td>
+<td style="text-align:left;">
+393 - 3,887 (1.5% - 14.7%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Female: 85+
+</td>
+<td style="text-align:left;">
+49,117
+</td>
+<td style="text-align:left;">
+32,310 (65.8%)
+</td>
+<td style="text-align:left;">
+26,630 -38,219 (54.2% - 77.8%)
+</td>
+<td style="text-align:left;">
+10,692 (21.8%)
+</td>
+<td style="text-align:left;">
+6,115 (12.5%)
+</td>
+<td style="text-align:left;">
+206 - 11,795 (0.4% - 24%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Male: 45-64
+</td>
+<td style="text-align:left;">
+13,776
+</td>
+<td style="text-align:left;">
+10,110 (73.4%)
+</td>
+<td style="text-align:left;">
+9,700 -10,509 (70.4% - 76.3%)
+</td>
+<td style="text-align:left;">
+2,985 (21.7%)
+</td>
+<td style="text-align:left;">
+681 (4.9%)
+</td>
+<td style="text-align:left;">
+282 - 1,091 (2% - 7.9%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Male: 65-74
+</td>
+<td style="text-align:left;">
+18,836
+</td>
+<td style="text-align:left;">
+13,903 (73.8%)
+</td>
+<td style="text-align:left;">
+13,435 -14,387 (71.3% - 76.4%)
+</td>
+<td style="text-align:left;">
+4,556 (24.2%)
+</td>
+<td style="text-align:left;">
+377 (2%)
+</td>
+<td style="text-align:left;">
+-107 - 845 (-0.6% - 4.5%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Male: 75-84
+</td>
+<td style="text-align:left;">
+32,296
+</td>
+<td style="text-align:left;">
+21,934 (67.9%)
+</td>
+<td style="text-align:left;">
+21,560 -22,332 (66.8% - 69.1%)
+</td>
+<td style="text-align:left;">
+9,026 (27.9%)
+</td>
+<td style="text-align:left;">
+1,336 (4.1%)
+</td>
+<td style="text-align:left;">
+938 - 1,710 (2.9% - 5.3%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Male: 85+
+</td>
+<td style="text-align:left;">
+34,047
+</td>
+<td style="text-align:left;">
+22,722 (66.7%)
+</td>
+<td style="text-align:left;">
+20,156 -25,349 (59.2% - 74.5%)
+</td>
+<td style="text-align:left;">
+9,132 (26.8%)
+</td>
+<td style="text-align:left;">
+2,193 (6.4%)
+</td>
+<td style="text-align:left;">
+-434 - 4,759 (-1.3% - 14%)
+</td>
+</tr>
+</tbody>
+</table>
 <p><br />
 </p>
 </div>
 <div id="deaths-from-week-ending-06032020-to-week-ending-05062020-by-gender-and-younger-ages-england-and-wales" class="section level3">
 <h3>Deaths from week ending 06/03/2020 to week ending 05/06/2020, by gender and younger ages, England and Wales</h3>
+<p><br />
+</p>
 <p><img src="Youngerage_update.png" /></p>
 <p>Website updated on 17/06/2020.</p>
 <p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen, Swapnil Mishra</p>
