--- a/glossary.html
+++ b/glossary.html
@@ -68,6 +68,7 @@ h6 {
 }
 </style>
 
+<link rel="stylesheet" href="styles.css" type="text/css" />
 
 
 
@@ -314,9 +315,13 @@ $(document).ready(function () {
 <p><strong><em>Expected deaths:</em></strong> An estimate of all-cause deaths that we would have expected in the absence of the COVID-19 pandemic. Expected deaths are forecast with a time series model using data from the week ending on 8/1/2010 to the week ending on 28/2/2020. Because they are a statistical forecast, they are uncertain and surrounded by a prediction interval.</p>
 <p><strong><em>Excess deaths:</em></strong> An estimate of the number of all-cause deaths that are substantially higher or lower than expected all-cause deaths in a week. Given by the difference between registered and expected all-cause deaths allowing for the uncertainty in that expectation.</p>
 <p><strong><em>Excess non-COVID-19 deaths:</em></strong> An estimate of the number of deaths that are not due to COVID-19 that are substantially higher or lower than expected all-cause deaths in a week. Given by subtracting registered COVID-19 deaths from the difference between registered and expected all-cause deaths, also allowing for the uncertainty in that expectation.</p>
-<p>Website updated on 17/06/2020.</p>
+<p>Website updated on 18/06/2020.</p>
 <p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen, Swapnil Mishra</p>
 
+<div id = "footer">
+  &nbsp
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+</div>
 
 
 
