--- a/Statistical_analysis.html
+++ b/Statistical_analysis.html
@@ -68,6 +68,7 @@ h6 {
 }
 </style>
 
+<link rel="stylesheet" href="styles.css" type="text/css" />
 
 
 
@@ -306,6 +307,8 @@ $(document).ready(function () {
 </div>
 
 
+<p><br />
+</p>
 <p>For the purpose of this study, we divide registered all-cause deaths into different categories (<a href="figures.html">Figure 1</a>). Registered (or observed) all-cause deaths (red line) comprise of deaths that mention COVID-19 as cause of death (registered COVID-19 deaths), as well as those that mention another condition as cause of death (registered non-COVID-19 deaths). Expected deaths (dashed black line) are the number of deaths that we would have expected without the COVID-19 pandemic. Expected deaths are forecast with a time series model using data from the week ending on 8/1/2010 to the week ending on 28/2/2020. Because they are a statistical forecast, they are uncertain and surrounded by a prediction interval (grey shaded area). Excess all-cause deaths are given by the difference between registered and expected all-cause deaths allowing for the uncertainty in that expectation; excess non-COVID-19 deaths are given by subtracting registered COVID-19 deaths from the difference between observed all-cause deaths and expected all-cause deaths, also allowing for the uncertainty in that expectation. Excess deaths are uncertain, because their estimation relies on expected (forecasted) all-cause deaths.</p>
 <p>Excess non-COVID-19 deaths may comprise of two broad types of deaths: underreported COVID-19 deaths, and indirect non-COVID-19 deaths; underreported COVID-19 deaths apply to individuals who died directly due to COVID-19 (i.e. COVID-19 was the main cause of death) but it was not reported on the death certificate, possibly because there was uncertainty or stigma surrounding the COVID-19 infection. Second, indirect non-COVID-19 deaths apply to individuals who did not die with COVID-19 as main cause of death, but they died indirectly due to the ongoing COVID-19 pandemic. This may have occurred because there was a disruption of healthcare provision and critically ill patients could not access care, or because patients avoided accessing healthcare. Both circumstances led to patients’ death, when they would have survived in the absence of the pandemic.</p>
 <p>A reliable estimation of excess deaths (all-cause and non-COVID-19) relies on a reliable forecasting of expected deaths. We used a local linear trend model with trigonometric seasonality for the week ending on 8/1/2010 to the week ending on 28/2/2020 using weekly registered deaths in England and Wales from the ONS to forecast deaths from March to the most recent week ending on 05/06/2020. This allowed us to capture the seasonality of the series as well as the growing population trends of older age groups over the past 10 years. The model was then used to forecast the number of expected deaths from the week ending on 06/03/2020 to the week ending on 05/06/2020.</p>
@@ -322,9 +325,13 @@ $(document).ready(function () {
 <p>Excess deaths can be computed from the above series. Comparing reported with predicted deaths for the period July 2019 to February 2020 allows us to assess the accuracy of the model in forecasting all-cause deaths; a close match between reported and predicted deaths over the time period before the COVID pandemic instils confidence in the validity of the forecasted all-cause deaths for the period of interest March and April that we would have expected in the absence of the pandemic.</p>
 <p>To assess the relative contribution of COVID-19 and excess deaths to all registered (observed) deaths during March and April, we calculate the percentage of expected (forecast) all-cause, registered COVID-19 and excess non-COVID-19 deaths on registered all-cause deaths, with prediction intervals around both expected deaths and excess non-COVID-19 deaths. We also calculate the proportion of registered to excess non-COVID-19 deaths.</p>
 <p>For each series the model is estimated using the R package KFAS. The source code of the analysis is available on <a href="www.github.com/j-idea/ONSdeaths">github.com/j-idea/ONSdeaths</a>. Going forward, updated estimates will be provided weekly over the pandemic and while there are significant excess deaths.</p>
-<p>Website updated on 17/06/2020.</p>
+<p>Website updated on 18/06/2020.</p>
 <p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen, Swapnil Mishra</p>
 
+<div id = "footer">
+  &nbsp
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+</div>
 
 
 
