--- a/Data.html
+++ b/Data.html
@@ -320,8 +320,8 @@ $(document).ready(function () {
 <h3>Table 1: Definitions of COVID-19 deaths between different sources</h3>
 <p><br />
 </p>
-<p><img src="figures/table1.png" width="1250" /> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsregisteredweeklyinenglandandwalesprovisional/weekending17april2020#measuring-the-data" class="uri">https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsregisteredweeklyinenglandandwalesprovisional/weekending17april2020#measuring-the-data</a></p>
-<p>Website updated on 18/06/2020.</p>
+<p><img src="figures/table1.png" width="1250" /> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsregisteredweeklyinenglandandwalesprovisional/weekending5june2020" class="uri">https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsregisteredweeklyinenglandandwalesprovisional/weekending5june2020</a></p>
+<p>Website updated on 19/06/2020.</p>
 <p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen, Swapnil Mishra</p>
 </div>
 
