--- a/index.html
+++ b/index.html
@@ -358,6 +358,362 @@ $(document).ready(function () {
 <p><br />
 </p>
 </div>
+<div id="england-weekly-deaths-since-06032020" class="section level3">
+<h3>England: Weekly deaths since 06/03/2020</h3>
+<p><br />
+</p>
+<table class="table table-striped table-condensed" style="width: auto !important; ">
+<thead>
+<tr>
+<th style="text-align:left;">
+Week ended
+</th>
+<th style="text-align:left;">
+Reported all-cause deaths
+</th>
+<th style="text-align:left;">
+Expected (%)
+</th>
+<th style="text-align:left;">
+Expected 95% prediction interval (%)
+</th>
+<th style="text-align:left;">
+Covid (%)
+</th>
+<th style="text-align:left;">
+Excess non-COVID
+</th>
+<th style="text-align:left;">
+Excess non-COVID 95% prediction interval (%)
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+2020-03-06
+</td>
+<td style="text-align:left;">
+10,225
+</td>
+<td style="text-align:left;">
+10,631 (104.0%)
+</td>
+<td style="text-align:left;">
+9,092 - 12,169 (88.9% - 119%)
+</td>
+<td style="text-align:left;">
+0 (0%)
+</td>
+<td style="text-align:left;">
+-406 (-4%)
+</td>
+<td style="text-align:left;">
+-1,944 - 1,133 (-19% - 11.1%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-03-13
+</td>
+<td style="text-align:left;">
+10,317
+</td>
+<td style="text-align:left;">
+10,419 (101.0%)
+</td>
+<td style="text-align:left;">
+8,880 - 11,957 (86.1% - 115.9%)
+</td>
+<td style="text-align:left;">
+5 (0%)
+</td>
+<td style="text-align:left;">
+-107 (-1%)
+</td>
+<td style="text-align:left;">
+-1,645 - 1,432 (-15.9% - 13.9%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-03-20
+</td>
+<td style="text-align:left;">
+9,903
+</td>
+<td style="text-align:left;">
+9,754 (98.5%)
+</td>
+<td style="text-align:left;">
+8,215 - 11,292 (83% - 114%)
+</td>
+<td style="text-align:left;">
+100 (1%)
+</td>
+<td style="text-align:left;">
+49 (0.5%)
+</td>
+<td style="text-align:left;">
+-1,489 - 1,588 (-15% - 16%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-03-27
+</td>
+<td style="text-align:left;">
+10,412
+</td>
+<td style="text-align:left;">
+9,666 (92.8%)
+</td>
+<td style="text-align:left;">
+8,127 - 11,204 (78.1% - 107.6%)
+</td>
+<td style="text-align:left;">
+515 (4.9%)
+</td>
+<td style="text-align:left;">
+231 (2.2%)
+</td>
+<td style="text-align:left;">
+-1,307 - 1,770 (-12.6% - 17%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-04-03
+</td>
+<td style="text-align:left;">
+15,443
+</td>
+<td style="text-align:left;">
+10,196 (66.0%)
+</td>
+<td style="text-align:left;">
+8,658 - 11,734 (56.1% - 76%)
+</td>
+<td style="text-align:left;">
+3,330 (21.6%)
+</td>
+<td style="text-align:left;">
+1,917 (12.4%)
+</td>
+<td style="text-align:left;">
+379 - 3,455 (2.5% - 22.4%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-04-10
+</td>
+<td style="text-align:left;">
+17,563
+</td>
+<td style="text-align:left;">
+10,125 (57.6%)
+</td>
+<td style="text-align:left;">
+8,586 - 11,663 (48.9% - 66.4%)
+</td>
+<td style="text-align:left;">
+5,899 (33.6%)
+</td>
+<td style="text-align:left;">
+1,539 (8.8%)
+</td>
+<td style="text-align:left;">
+1 - 3,078 (0% - 17.5%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-04-17
+</td>
+<td style="text-align:left;">
+21,157
+</td>
+<td style="text-align:left;">
+9,794 (46.3%)
+</td>
+<td style="text-align:left;">
+8,256 - 11,332 (39% - 53.6%)
+</td>
+<td style="text-align:left;">
+8,335 (39.4%)
+</td>
+<td style="text-align:left;">
+3,028 (14.3%)
+</td>
+<td style="text-align:left;">
+1,490 - 4,566 (7% - 21.6%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-04-24
+</td>
+<td style="text-align:left;">
+20,841
+</td>
+<td style="text-align:left;">
+9,952 (47.7%)
+</td>
+<td style="text-align:left;">
+8,413 - 11,490 (40.4% - 55.1%)
+</td>
+<td style="text-align:left;">
+7,806 (37.5%)
+</td>
+<td style="text-align:left;">
+3,083 (14.8%)
+</td>
+<td style="text-align:left;">
+1,545 - 4,622 (7.4% - 22.2%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-05-01
+</td>
+<td style="text-align:left;">
+17,004
+</td>
+<td style="text-align:left;">
+9,374 (55.1%)
+</td>
+<td style="text-align:left;">
+7,835 - 10,912 (46.1% - 64.2%)
+</td>
+<td style="text-align:left;">
+5,748 (33.8%)
+</td>
+<td style="text-align:left;">
+1,882 (11.1%)
+</td>
+<td style="text-align:left;">
+344 - 3,421 (2% - 20.1%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-05-08
+</td>
+<td style="text-align:left;">
+11,946
+</td>
+<td style="text-align:left;">
+9,591 (80.3%)
+</td>
+<td style="text-align:left;">
+8,052 - 11,129 (67.4% - 93.2%)
+</td>
+<td style="text-align:left;">
+3,716 (31.1%)
+</td>
+<td style="text-align:left;">
+-1,361 (-11.4%)
+</td>
+<td style="text-align:left;">
+-2,899 - 178 (-24.3% - 1.5%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-05-15
+</td>
+<td style="text-align:left;">
+13,783
+</td>
+<td style="text-align:left;">
+9,686 (70.3%)
+</td>
+<td style="text-align:left;">
+8,148 - 11,225 (59.1% - 81.4%)
+</td>
+<td style="text-align:left;">
+3,624 (26.3%)
+</td>
+<td style="text-align:left;">
+473 (3.4%)
+</td>
+<td style="text-align:left;">
+-1,066 - 2,011 (-7.7% - 14.6%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-05-22
+</td>
+<td style="text-align:left;">
+11,586
+</td>
+<td style="text-align:left;">
+8,947 (77.2%)
+</td>
+<td style="text-align:left;">
+7,408 - 10,485 (63.9% - 90.5%)
+</td>
+<td style="text-align:left;">
+2,455 (21.2%)
+</td>
+<td style="text-align:left;">
+184 (1.6%)
+</td>
+<td style="text-align:left;">
+-1,354 - 1,723 (-11.7% - 14.9%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-05-29
+</td>
+<td style="text-align:left;">
+9,228
+</td>
+<td style="text-align:left;">
+8,677 (94.0%)
+</td>
+<td style="text-align:left;">
+7,139 - 10,215 (77.4% - 110.7%)
+</td>
+<td style="text-align:left;">
+1,715 (18.6%)
+</td>
+<td style="text-align:left;">
+-1,164 (-12.6%)
+</td>
+<td style="text-align:left;">
+-2,702 - 374 (-29.3% - 4.1%)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2020-06-05
+</td>
+<td style="text-align:left;">
+9,995
+</td>
+<td style="text-align:left;">
+9,472 (94.8%)
+</td>
+<td style="text-align:left;">
+7,933 - 11,010 (79.4% - 110.2%)
+</td>
+<td style="text-align:left;">
+1,488 (14.9%)
+</td>
+<td style="text-align:left;">
+-965 (-9.7%)
+</td>
+<td style="text-align:left;">
+-2,503 - 574 (-25% - 5.7%)
+</td>
+</tr>
+</tbody>
+</table>
+</div>
 <div id="wales-deaths-from-week-ending-06032020-to-week-ending-05062020" class="section level3">
 <h3>Wales: Deaths from week ending 06/03/2020 to week ending 05/06/2020</h3>
 <p><br />
@@ -990,7 +1346,7 @@ Male: 85+
 <p><br />
 </p>
 <p><img src="Youngerage_update.png" /></p>
-<p>Website updated on 18/06/2020.</p>
+<p>Website updated on 22/06/2020.</p>
 <p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen, Swapnil Mishra</p>
 </div>
 
