--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ $(document).ready(function () {
 <h3>England: Deaths from week ending 06/03/2020 to week ending 05/06/2020</h3>
 <p><br />
 </p>
-<p><img src="index_files/figure-html/unnamed-chunk-2-1.png" width="672" style="display: block; margin: auto;" /> <img src="England_update.png" /></p>
+<p><img src="England_update.png" /></p>
 <p>In the week ending 05 June 2020, there were 9995 registered all-cause deaths in England. These comprise of 1488 deaths registered due to COVID-19 and 8507 deaths registered due to other conditions.</p>
 <p>Over the weeks ending 6 March 2020 to 05 June 2020, there were 189403 cumulative registered all-cause deaths in England. These comprise of 44736 deaths due to COVID-19 and 144667 deaths due to other conditions. We would have expected 136294 (95% CI 133882 – 138696) all-cause deaths for that period. This implies that total excess deaths were between 50707 – 55521, and comprised of 8373 (95% CI 5971 – 10785) non-COVID-19 excess deaths.</p>
 <p><br />
@@ -718,7 +718,7 @@ Excess non-COVID-19 95% prediction interval (%)
 <h3>Wales: Deaths from week ending 06/03/2020 to week ending 05/06/2020</h3>
 <p><br />
 </p>
-<p><img src="index_files/figure-html/unnamed-chunk-4-1.png" width="672" style="display: block; margin: auto;" /> <img src="Wales_update.png" /></p>
+<p><img src="Wales_update.png" /></p>
 <p>In the week ending 05 June 2020, there were 700 registered all-cause deaths in Wales. These comprise of 100 deaths due to COVID-19 and 600 deaths due to other conditions. We would have expected 596 (95% CI 460 – 733) all-cause deaths for that week. This implies that total excess deaths were between -33 – 240, and excess non-COVID-19 deaths were not significantly different than the expected deaths.</p>
 <p>Over the weeks ending 6 March 2020 to 05 June 2020, there were 11278 cumulative registered all-cause deaths in Wales. These comprise of 2294 deaths due to COVID-19 and 8984 deaths due to other conditions. We would have expected 8983 (95% CI 8051 – 9904) all-cause deaths for that period. This implies that total excess deaths were between 1374 – 3227, and excess non-COVID-19 deaths were not significantly different than the expected deaths.</p>
 <p><br />
