--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ $(document).ready(function () {
 <h3>England: Deaths from week ending 06/03/2020 to week ending 12/06/2020</h3>
 <p><br />
 </p>
-<p><img src="index_files/figure-html/unnamed-chunk-2-1.png" width="672" style="display: block; margin: auto;" /> <img src="England_update.png" /></p>
+<p><img src="England_update.png" /></p>
 <p>In the week ending 12 June 2020, there were 9391 registered all-cause deaths in England. These comprise of 1057 deaths registered due to COVID-19 and 8334 deaths registered due to other conditions.</p>
 <p>Over the weeks ending 6 March 2020 to 12 June 2020, there were 198794 cumulative registered all-cause deaths in England. These comprise of 45793 deaths due to COVID-19 and 153001 deaths due to other conditions. We would have expected 145365 (95% CI 142938 – 147936) all-cause deaths for that period. This implies that total excess deaths were between 50858 – 55856, and comprised of 7636 (95% CI 5065 – 10063) non-COVID-19 excess deaths.</p>
 <p><br />
@@ -751,7 +751,7 @@ Excess non-COVID-19 95% prediction interval (%)
 <h3>Wales: Deaths from week ending 06/03/2020 to week ending 12/06/2020</h3>
 <p><br />
 </p>
-<p><img src="index_files/figure-html/unnamed-chunk-5-1.png" width="672" style="display: block; margin: auto;" /> <img src="Wales_update.png" /></p>
+<p><img src="Wales_update.png" /></p>
 <p>In the week ending 12 June 2020, there were 574 registered all-cause deaths in Wales. These comprise of 57 deaths due to COVID-19 and 517 deaths due to other conditions.</p>
 <p>Over the weeks ending 6 March 2020 to 12 June 2020, there were 11852 cumulative registered all-cause deaths in Wales. These comprise of 2351 deaths due to COVID-19 and 9501 deaths due to other conditions.</p>
 <p><br />
