--- a/Data.html
+++ b/Data.html
@@ -307,8 +307,6 @@ $(document).ready(function () {
 </div>
 
 
-<p><br />
-</p>
 <p>The ONS publishes the provisional number of deaths registered in the past week in England and Wales split by gender, age groups and regions [1]. The statistics are derived from the formal process of death registration in Registry offices in England and Wales in the stated week, which is done online via a dedicated registration system and includes deaths occurring outside hospital. Figures are based on the date of registration of death rather than the date of death, Registry Offices continued to take death registrations over the Easter holiday period this year, which may offset the usual drop in registration of deaths occurring in the Easter week. Estimates of death by region are based on area of usual residence. Figures include deaths of non-residents, in 2018 these were 0.24% of all deaths (Table 3 in [2]).</p>
 <p>Since the beginning of March 2020, the weekly statistics also report the number of deaths for which the novel coronavirus (COVID-19) is mentioned in the death certificate. A doctor can certify the involvement of COVID-19 based on symptoms and clinical findings – a positive test result is not required. The death numbers used for this study are different from the daily surveillance figures on COVID-19 deaths published by the Department of Health and Social Care (DHSC) on the GOV.UK website, for the UK as a whole and constituent countries (see Table 1).</p>
 <p>To allow time for registration and processing, the figures are provisional and are published by ONS 11 days after the week ends. There is usually a delay of around five working days between occurrence of a death and registration; for deaths occurring in March 2020, there was an average delay of four days [3]. The percentage of deaths registered within 7 calendar days or fewer has decreased from 87.7% in 2010 to 73.8% in 2018, which implies that there was an increase in the delay by which deaths are reported. The percentage of deaths registered within 7 calendar days varies by region and is highest in the North East (81.9%) and lowest in the South East (68.2%) [4].</p>
@@ -321,13 +319,20 @@ $(document).ready(function () {
 <p><br />
 </p>
 <p><img src="figures/table1.png" width="1250" /> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsregisteredweeklyinenglandandwalesprovisional/weekending5june2020" class="uri">https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsregisteredweeklyinenglandandwalesprovisional/weekending5june2020</a></p>
-<p>Website updated on 19/06/2020.</p>
-<p>Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen, Swapnil Mishra</p>
+<p>Website updated on 26/06/2020.</p>
 </div>
 
 <div id = "footer">
   &nbsp
-<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+<p style="text-align:center;">
+<a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
+<img align = “left” class = "imperiallogo" src="MRC-GIDA-logo.png" width="200" height=“100”></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” class = “imperiallogo" src="ICL-JIDEA-1.png" width="200" height=“100”></a>
+</br>
+</br>
+Website by Alessandra Lochen, Daniel Anderson, Giovanni Forchini, Katharina Hauck, Swapnil Mishra. This is an official product of the Imperial College COVID-19 response team: the WHO Collaborating Centre for Infectious Disease Modelling within the MRC Centre for Global Infectious Disease Analysis, J-IDEA, Imperial College London. 
+</br>
+</a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+</p>
 </div>
 
 
