--- a/Data.html
+++ b/Data.html
@@ -297,6 +297,14 @@ $(document).ready(function () {
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </div><!--/.navbar -->
+<!DOCTYPE HTML>
+<div id="header">
+</br>
+<p style="text-align:center;">
+   <p>Jameel Institute (J-IDEA), MRC Centre for Global Infectious Disease Analysis, Imperial College London
+</p>
+</div>
+<hr>
 
 <div class="fluid-row" id="header">
 
@@ -321,15 +329,13 @@ $(document).ready(function () {
 <p><br />
 </p>
 <p><img src="figures/table1.png" width="1250" /> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsregisteredweeklyinenglandandwalesprovisional/weekending5june2020" class="uri">https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsregisteredweeklyinenglandandwalesprovisional/weekending5june2020</a></p>
-<p>Website updated on 30/06/2020.</p>
 </div>
 
 <div id = "footer">
   &nbsp
 <p style="text-align:center;">
 <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
-<img align = “left” class = "imperiallogo" src="MRC-GIDA-logo.png" width="200" height=“100”></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” class = “imperiallogo" src="ICL-JIDEA-1.png" width="200" height=“100”></a>
-</br>
+<img align = “left” id = "imperiallogo" src="MRC-GIDA-logo.png" style="width:300px;height:110px;"></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” id = “imperiallogo" src="ICL-JIDEA-1.png" style="width:300px;height:110px;"></a>
 </br>
 Website by Alessandra Lochen, Daniel Anderson, Giovanni Forchini, Katharina Hauck, Swapnil Mishra. This is an official product of the Imperial College COVID-19 response team: the WHO Collaborating Centre for Infectious Disease Modelling within the MRC Centre for Global Infectious Disease Analysis, J-IDEA, Imperial College London. 
 </br>
