--- a/References.html
+++ b/References.html
@@ -297,6 +297,14 @@ $(document).ready(function () {
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </div><!--/.navbar -->
+<!DOCTYPE HTML>
+<div id="header">
+</br>
+<p style="text-align:center;">
+   <p>Jameel Institute (J-IDEA), MRC Centre for Global Infectious Disease Analysis, Imperial College London
+</p>
+</div>
+<hr>
 
 <div class="fluid-row" id="header">
 
@@ -316,14 +324,12 @@ $(document).ready(function () {
 <li>Office for National Statistics. Impact of registration delays on mortality statistics in England and Wales: 2018. 2020; Available from: <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/articles/impactofregistrationdelaysonmortalitystatisticsinenglandandwales/2018" class="uri">https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/articles/impactofregistrationdelaysonmortalitystatisticsinenglandandwales/2018</a>.</li>
 <li>Harvey, A.C., Forecasting, structural time series models and the Kalman filter. 1990: Cambridge university press.</li>
 </ol>
-<p>Website updated on 30/06/2020.</p>
 
 <div id = "footer">
   &nbsp
 <p style="text-align:center;">
 <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
-<img align = “left” class = "imperiallogo" src="MRC-GIDA-logo.png" width="200" height=“100”></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” class = “imperiallogo" src="ICL-JIDEA-1.png" width="200" height=“100”></a>
-</br>
+<img align = “left” id = "imperiallogo" src="MRC-GIDA-logo.png" style="width:300px;height:110px;"></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” id = “imperiallogo" src="ICL-JIDEA-1.png" style="width:300px;height:110px;"></a>
 </br>
 Website by Alessandra Lochen, Daniel Anderson, Giovanni Forchini, Katharina Hauck, Swapnil Mishra. This is an official product of the Imperial College COVID-19 response team: the WHO Collaborating Centre for Infectious Disease Modelling within the MRC Centre for Global Infectious Disease Analysis, J-IDEA, Imperial College London. 
 </br>
