--- a/figures.html
+++ b/figures.html
@@ -297,6 +297,14 @@ $(document).ready(function () {
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </div><!--/.navbar -->
+<!DOCTYPE HTML>
+<div id="header">
+</br>
+<p style="text-align:center;">
+   <p>Jameel Institute (J-IDEA), MRC Centre for Global Infectious Disease Analysis, Imperial College London
+</p>
+</div>
+<hr>
 
 <div class="fluid-row" id="header">
 
@@ -338,8 +346,7 @@ $(document).ready(function () {
   &nbsp
 <p style="text-align:center;">
 <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
-<img align = “left” class = "imperiallogo" src="MRC-GIDA-logo.png" width="200" height=“100”></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” class = “imperiallogo" src="ICL-JIDEA-1.png" width="200" height=“100”></a>
-</br>
+<img align = “left” id = "imperiallogo" src="MRC-GIDA-logo.png" style="width:300px;height:110px;"></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” id = “imperiallogo" src="ICL-JIDEA-1.png" style="width:300px;height:110px;"></a>
 </br>
 Website by Alessandra Lochen, Daniel Anderson, Giovanni Forchini, Katharina Hauck, Swapnil Mishra. This is an official product of the Imperial College COVID-19 response team: the WHO Collaborating Centre for Infectious Disease Modelling within the MRC Centre for Global Infectious Disease Analysis, J-IDEA, Imperial College London. 
 </br>
