--- a/Data.html
+++ b/Data.html
@@ -268,7 +268,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">J-IDEA COVID-19 excess deaths tracker for England and Wales</a>
+      <a class="navbar-brand" href="index.html"><img id="logo"  src="logo.jpg" alt="Imperial College Logo" /></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -301,7 +301,7 @@ $(document).ready(function () {
 <div id="header">
 </br>
 <p style="text-align:center;">
-   <p>Jameel Institute (J-IDEA), MRC Centre for Global Infectious Disease Analysis, Imperial College London
+   <p>J-IDEA COVID-19 excess deaths tracker for England and Wales
 </p>
 </div>
 <hr>
@@ -334,9 +334,8 @@ $(document).ready(function () {
 <div id = "footer">
   &nbsp
 <p style="text-align:center;">
-<a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
-<img align = “left” id = "imperiallogo" src="MRC-GIDA-logo.png" style="width:300px;height:60px;"></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” id = “imperiallogo" src="ICL-JIDEA-1.png" style="width:300px;height:110px;"></a>
-</br>
+<a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” id = “imperiallogo" src="ICL-JIDEA-1.png" style="width:300px;height:110px;"></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
+<img align = “left” id = "imperiallogo" src="MRC-GIDA-logo.png" style="width:300px;height:60px;"></a> </br>
 Website by Alessandra Lochen, Daniel Anderson, Giovanni Forchini, Katharina Hauck, Swapnil Mishra. This is an official product of the Imperial College COVID-19 response team: the WHO Collaborating Centre for Infectious Disease Modelling within the MRC Centre for Global Infectious Disease Analysis, J-IDEA, Imperial College London. 
 </br>
 </a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
