--- a/Statistical_analysis.html
+++ b/Statistical_analysis.html
@@ -268,7 +268,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">J-IDEA COVID-19 excess deaths tracker for England and Wales</a>
+      <a class="navbar-brand" href="index.html"><img id="logo"  src="logo.jpg" alt="Imperial College Logo" /></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -301,7 +301,7 @@ $(document).ready(function () {
 <div id="header">
 </br>
 <p style="text-align:center;">
-   <p>Jameel Institute (J-IDEA), MRC Centre for Global Infectious Disease Analysis, Imperial College London
+   <p>J-IDEA COVID-19 excess deaths tracker for England and Wales
 </p>
 </div>
 <hr>
@@ -333,14 +333,13 @@ $(document).ready(function () {
 <p>Excess deaths can be computed from the above series. Comparing reported with predicted deaths for the period July 2019 to February 2020 allows us to assess the accuracy of the model in forecasting all-cause deaths; a close match between reported and predicted deaths over the time period before the COVID pandemic instils confidence in the validity of the forecasted all-cause deaths for the period of interest March and April that we would have expected in the absence of the pandemic.</p>
 <p>To assess the relative contribution of COVID-19 and excess deaths to all registered (observed) deaths during March and April, we calculate the percentage of expected (forecast) all-cause, registered COVID-19 and excess non-COVID-19 deaths on registered all-cause deaths, with prediction intervals around both expected deaths and excess non-COVID-19 deaths. We also calculate the proportion of registered to excess non-COVID-19 deaths.</p>
 <p>For each series the model is estimated using the R package KFAS. The source code of the analysis is available on <a href="www.github.com/j-idea/ONSdeaths">github.com/j-idea/ONSdeaths</a>. Going forward, updated estimates will be provided weekly over the pandemic and while there are significant excess deaths.</p>
-<p>Website updated on 30/06/2020.</p>
+<p>Website updated on 02/07/2020.</p>
 
 <div id = "footer">
   &nbsp
 <p style="text-align:center;">
-<a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
-<img align = “left” id = "imperiallogo" src="MRC-GIDA-logo.png" style="width:300px;height:60px;"></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” id = “imperiallogo" src="ICL-JIDEA-1.png" style="width:300px;height:110px;"></a>
-</br>
+<a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” id = “imperiallogo" src="ICL-JIDEA-1.png" style="width:300px;height:110px;"></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
+<img align = “left” id = "imperiallogo" src="MRC-GIDA-logo.png" style="width:300px;height:60px;"></a> </br>
 Website by Alessandra Lochen, Daniel Anderson, Giovanni Forchini, Katharina Hauck, Swapnil Mishra. This is an official product of the Imperial College COVID-19 response team: the WHO Collaborating Centre for Infectious Disease Modelling within the MRC Centre for Global Infectious Disease Analysis, J-IDEA, Imperial College London. 
 </br>
 </a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
