--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ $(document).ready(function () {
 <div id="header">
 </br>
 <p style="text-align:center;">
-   <p>J-IDEA COVID-19 excess deaths tracker for England and Wales
+   <p><strong>J-IDEA COVID-19 excess deaths tracker for England and Wales</strong>
 </p>
 </div>
 <hr>
