--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <div id="header">
 </br>
 <p style="text-align:center;">
-   <p>Jameel Institute (J-IDEA), MRC Centre for Global Infectious Disease Analysis, Imperial College London
+   <p><strong>J-IDEA COVID-19 excess deaths tracker for England and Wales</strong>
 </p>
 </div>
 <hr>
