--- a/figures.html
+++ b/figures.html
@@ -268,7 +268,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">J-IDEA COVID-19 excess deaths tracker for England and Wales</a>
+      <a class="navbar-brand" href="index.html"><img id="logo"  src="logo.jpg" alt="Imperial College Logo" /></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -297,6 +297,14 @@ $(document).ready(function () {
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </div><!--/.navbar -->
+<!DOCTYPE HTML>
+<div id="header">
+</br>
+<p style="text-align:center;">
+   <p><strong>J-IDEA COVID-19 excess deaths tracker for England and Wales</strong>
+</p>
+</div>
+<hr>
 
 <div class="fluid-row" id="header">
 
@@ -311,7 +319,7 @@ $(document).ready(function () {
 <p><br />
 </p>
 <div class="figure">
-<img src="figures/figure1.jpeg" alt="Figure 1: Weekly excess non-COVID-19 deaths are higher than expected deaths." width="700" />
+<img src="figures/figure1.jpeg" width="700" alt="" />
 <p class="caption"><strong>Figure 1:</strong> Weekly excess non-COVID-19 deaths are higher than expected deaths.</p>
 </div>
 <p>Note: red line: all-cause registered deaths, purple line: registered non-COVID-19 deaths, dashed black line: expected (forecast) deaths with confidence interval; estimated quantities in italics</p>
@@ -319,14 +327,14 @@ $(document).ready(function () {
 <br />
 </p>
 <div class="figure">
-<img src="figures/figure2.jpeg" alt="Figure 2: Weekly excess non-COVID-19 deaths are so small that they are not different than expected deaths." width="700" />
+<img src="figures/figure2.jpeg" width="700" alt="" />
 <p class="caption"><strong>Figure 2:</strong> Weekly excess non-COVID-19 deaths are so small that they are not different than expected deaths.</p>
 </div>
 <p><br />
 <br />
 </p>
 <div class="figure">
-<img src="figures/figure3.jpeg" alt="Figure 3: Weekly excess non-COVID-19 deaths are lower than expected deaths." width="700" />
+<img src="figures/figure3.jpeg" width="700" alt="" />
 <p class="caption"><strong>Figure 3:</strong> Weekly excess non-COVID-19 deaths are lower than expected deaths.</p>
 </div>
 <p><br />
@@ -337,10 +345,8 @@ $(document).ready(function () {
 <div id = "footer">
   &nbsp
 <p style="text-align:center;">
-<a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
-<img align = “left” class = "imperiallogo" src="MRC-GIDA-logo.png" width="200" height=“100”></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” class = “imperiallogo" src="ICL-JIDEA-1.png" width="200" height=“100”></a>
-</br>
-</br>
+<a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” id = “imperiallogo" src="ICL-JIDEA-1.png" style="width:300px;height:110px;"></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
+<img align = “left” id = "imperiallogo" src="MRC-GIDA-logo.png" style="width:300px;height:60px;"></a> </br>
 Website by Alessandra Lochen, Daniel Anderson, Giovanni Forchini, Katharina Hauck, Swapnil Mishra. This is an official product of the Imperial College COVID-19 response team: the WHO Collaborating Centre for Infectious Disease Modelling within the MRC Centre for Global Infectious Disease Analysis, J-IDEA, Imperial College London. 
 </br>
 </a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
