--- a/glossary.html
+++ b/glossary.html
@@ -268,7 +268,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">J-IDEA COVID-19 excess deaths tracker for England and Wales</a>
+      <a class="navbar-brand" href="index.html"><img id="logo"  src="logo.jpg" alt="Imperial College Logo" /></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -297,6 +297,14 @@ $(document).ready(function () {
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </div><!--/.navbar -->
+<!DOCTYPE HTML>
+<div id="header">
+</br>
+<p style="text-align:center;">
+   <p><strong>J-IDEA COVID-19 excess deaths tracker for England and Wales</strong>
+</p>
+</div>
+<hr>
 
 <div class="fluid-row" id="header">
 
@@ -315,15 +323,12 @@ $(document).ready(function () {
 <p><strong><em>Expected deaths:</em></strong> An estimate of all-cause deaths that we would have expected in the absence of the COVID-19 pandemic. Expected deaths are forecast with a time series model using data from the week ending on 8/1/2010 to the week ending on 28/2/2020. Because they are a statistical forecast, they are uncertain and surrounded by a prediction interval.</p>
 <p><strong><em>Excess deaths:</em></strong> An estimate of the number of all-cause deaths that are substantially higher or lower than expected all-cause deaths in a week. Given by the difference between registered and expected all-cause deaths allowing for the uncertainty in that expectation.</p>
 <p><strong><em>Excess non-COVID-19 deaths:</em></strong> An estimate of the number of deaths that are not due to COVID-19 that are substantially higher or lower than expected all-cause deaths in a week. Given by subtracting registered COVID-19 deaths from the difference between registered and expected all-cause deaths, also allowing for the uncertainty in that expectation.</p>
-<p>Website updated on 26/06/2020.</p>
 
 <div id = "footer">
   &nbsp
 <p style="text-align:center;">
-<a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
-<img align = “left” class = "imperiallogo" src="MRC-GIDA-logo.png" width="200" height=“100”></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” class = “imperiallogo" src="ICL-JIDEA-1.png" width="200" height=“100”></a>
-</br>
-</br>
+<a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/"> <img align = “left” id = “imperiallogo" src="ICL-JIDEA-1.png" style="width:300px;height:110px;"></a> <a href = "https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/">
+<img align = “left” id = "imperiallogo" src="MRC-GIDA-logo.png" style="width:300px;height:60px;"></a> </br>
 Website by Alessandra Lochen, Daniel Anderson, Giovanni Forchini, Katharina Hauck, Swapnil Mishra. This is an official product of the Imperial College COVID-19 response team: the WHO Collaborating Centre for Infectious Disease Modelling within the MRC Centre for Global Infectious Disease Analysis, J-IDEA, Imperial College London. 
 </br>
 </a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
